--- a/css/style.css
+++ b/css/style.css
@@ -430,4 +430,102 @@ section{
     animation-range: entry 20% cover 80%;
     animation-fill-mode: both;
 }
- 
+
+.habilidades div h1{
+    text-align: center;
+    font-size: 56px;
+    padding-bottom: 2vh;
+}
+.habilidades div span{
+    color: var(--second-bg-color);
+}
+.habilidades div div div h2{
+    text-align: center;
+    padding-bottom: 1vh;
+    padding-top: 1vh;
+}
+.habilidades div div div .cuadroHabili{
+    padding: 1rem 0;
+    border: 2px solid var(--second-bg-color);
+    border-radius: 5px;
+}
+
+.habilidades .cuadroHabili div h3{
+    font-size: 1.7rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+.habilidades .cuadroHabili div .barra{
+
+    height: 2rem;
+    border-radius: 5px;
+    border: 1.5px solid var(--main-color);
+    padding: .3rem;
+    margin: 1rem ;
+}
+
+.habilidades .cuadroHabili div .barra span{
+    display: block;
+    height: 100%;
+    border-radius: .3rem ;
+    background-color: var(--main-color);
+}
+
+.skills:nth-child(1) .cuadroHabili div:nth-child(1) .barra span {
+    width: 80%;
+}
+.skills:nth-child(1) .cuadroHabili div:nth-child(2) .barra span {
+    width: 70%;
+}
+.skills:nth-child(1) .cuadroHabili div:nth-child(3) .barra span {
+    width: 80%;
+}
+.skills:nth-child(1) .cuadroHabili div:nth-child(4) .barra span {
+    width: 100%;
+}
+.skills:nth-child(2) .cuadroHabili div:nth-child(1) .barra span {
+    width: 70%;
+}
+.skills:nth-child(2) .cuadroHabili div:nth-child(2) .barra span {
+    width:70%;
+}
+.skills:nth-child(2) .cuadroHabili div:nth-child(3) .barra span {
+    width: 80%;
+}
+.skills:nth-child(2) .cuadroHabili div:nth-child(4) .barra span {
+    width: 80%;
+}
+
+.contacto div div .inputStyle {
+    margin-top: .8rem;
+}
+
+.contacto div div .inputStyle input,
+.contacto div div .inputStyle textarea{
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    border: 2px solid var(--second-bg-color);
+    border-radius: 4px;
+    background-color: var(--bg-color);
+}
+
+.contacto div div .botonEnviar{
+    display: flex;
+    justify-content: center;
+}
+
+.contacto div div .botonEnviar .btn-box{
+    width: auto;
+    margin-top: 1rem;
+}
+
+.contacto .animacionMiCamino h1{
+    font-size: 58px;
+    text-align: center;
+}
+.contacto .animacionMiCamino h1 span{
+    color: var(--main-color);
+}
