--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ section{
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background-image: url("../Imagenes/Tomioka.jpg");
+    background-image: url("../Imagenes/kevinportada.png");
     background-size: cover;
     background-position: center;
 }
@@ -292,6 +292,12 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.acercade div .imgkevin{
+    width: 200px;
+    border: 4px solid var(--second-bg-color);
+    border-radius: 100%;
 }
 
 .contenedorAcercade div h1{
